# auren-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
configs/: default.yaml
forge/: __init__.py  __main__.py  agent.py  app.py  callback.py  cli.py  config.py  dataset.py  display.py  evaluation.py  forge.tcss  monitor.py  session.py  tools.py  training.py
forge/providers/: __init__.py  base.py  ollama.py  openrouter.py
forge/screens/: __init__.py  chat.py  eval_results.py  history.py  home.py  settings.py  setup.py  training.py
forge/widgets/: __init__.py  agent_log.py  loss_chart.py  metrics_panel.py  status_bar.py
tests/: test_agent.py  test_app.py  test_config.py  test_dataset.py  test_monitor.py  test_session.py
